--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@tailwindcss/vite": "^4.1.17",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
+    "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
     "immer": "^11.0.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-draggable": "^4.5.0",
     "react-pdf": "^10.2.0",
     "react-tooltip": "^5.30.0",
     "tailwindcss": "^4.1.17",
